fix export issue

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@1inch/fusion-sdk",
+    "name": "1inch-fusion-sdk",
     "version": "2.2.3",
-    "description": "1inch Fusion SDK",
+    "description": "a forked version of 1inch Fusion SDK",
     "author": "@1inch",
     "files": [
         "dist",
@@ -12,22 +12,6 @@
     "module": "./dist/esm/index.js",
     "main": "./dist/cjs/index.js",
     "types": "./dist/types/src/index.d.ts",
-    "exports": {
-        ".": {
-            "types": "./dist/types/src/index.d.ts",
-            "import": "./dist/esm/index.js",
-            "require": "./dist/cjs/index.js",
-            "node": "./dist/cjs/index.js",
-            "default": "./dist/cjs/index.js"
-        },
-        "./api": {
-            "types": "./dist/types/src/api-ext.d.ts",
-            "import": "./dist/esm/api-ext.js",
-            "require": "./dist/cjs/api-ext.js",
-            "node": "./dist/cjs/api-ext.js",
-            "default": "./dist/cjs/api-ext.js"
-        }
-    },
     "repository": {
         "type": "git",
         "url": "ssh://git@github.com:1inch/fusion-sdk.git"
